--- a/app/index.html
+++ b/app/index.html
@@ -39,35 +39,35 @@
     <!-- Projects -->
     <div class="flex flexRow flexRowSpace flexWrap">
       <div class="project">
-        <a href="http://mailpen.de/#/demo">
+        <a href="http://mailpen.de/#/demo" target="_blank">
           <img src="images/projects/mailpen_thumb.jpg" alt="Mailpen Thumbnail" width="300">
         </a>
       </div>
       <div class="project">
-        <a href="https://github.com/themihel/APIWeasel">
+        <a href="https://github.com/themihel/APIWeasel" target="_blank">
           <img src="images/projects/apiweasel_thumb.jpg" alt="APIWeasel Thumbnail" width="300">
         </a>
       </div>
       <div class="project">
-        <a href="images/mockups/pdf_merge.jpg">
+        <a href="https://www.behance.net/gallery/35127337/Adobe-XD-Travel-App-Foodtravel" target="_blank">
+          <img src="images/projects/foodtravel_thumb.jpg" alt="Foodtravel Thumbnail" width="300">
+        </a>
+      </div>
+      <div class="project">
+        <a href="images/mockups/pdf_merge.jpg" target="_blank">
           <img src="images/projects/pdfmerge_thumb.jpg" alt="PDF-Merge Thumbnail" width="300">
         </a>
       </div>
       <div class="project">
-        <a href="images/mockups/worktimer.jpg">
+        <a href="images/mockups/worktimer.jpg" target="_blank">
           <img src="images/projects/worktimer_thumb.jpg" alt="Worktimer Thumbnail" width="300">
         </a>
       </div>
       <div class="project">
-        <a href="http://qr.themihel.me">
+        <a href="http://qr.themihel.me" target="_blank">
           <img src="images/projects/qrcode_thumb.jpg" alt="QRCode Thumbnail" width="300">
         </a>
       </div>
-      <!-- <div class="project">
-        <a href="http://pintura.themihel.me">
-          <img src="images/projects/pintura_thumb.jpg" alt="Pintura Thumbnail" width="300">
-        </a>
-      </div> -->
     </div>
 
 
