Some basic meta infos

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="theme-color" content="#254441">
+  <meta name="author" content="Mischa Helfenstein">
+  <meta name="description" content="Mischa Helfenstein | Frontend-Developer | UX/UI-Design">
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles/app.css">
