Add modules to page

--- a/app/index.html
+++ b/app/index.html
@@ -23,19 +23,21 @@
 
     <!-- Profile Picture  -->
     <div class="flex flexRow flexRowCenter">
-      <div class="profile">
+      <div class="headerImage">
         <img src="images/profile/Social_quad.jpg" alt="Profile Picture">
       </div>
     </div>
 
-    <div class="name">
-      <div class="nickname">themihel</div>
-      <div class="realname">Mischa Helfenstein</div>
+    <div class="title">
+      <h1>themihel</h1>
+      <h2>Mischa Helfenstein</h2>
     </div>
 
     <!-- Social -->
-    <div class="social">
-      <a href="https://twitter.com/themihel">Twitter</a> | <a href="https://github.com/themihel">Github</a> | <a href="mailto:helfenstein.mischa@gmail.com">Mail</a>
+    <div class="links">
+      <a href="https://twitter.com/themihel">Twitter</a> |
+      <a href="https://github.com/themihel">Github</a> |
+      <a href="mailto:helfenstein.mischa@gmail.com">Mail</a>
     </div>
 
     <!-- Projects -->
