--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
   <!-- favicon -->
   <link rel="icon" type="image/png" href="images/favicon.png" />
 
+  <!-- manifest -->
+  <link rel="manifest" href="/manifest.json">
+
   <!-- Title -->
   <title>themihel.me | Mischa Helfenstein</title>
 </head>
