--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,15 @@
       </div>
     </div>
 
+    <!-- cookieNote -->
+    <div class="cookieNote">
+      <div class="cnText">This website uses cookies!</div>
+      <div class="cnButton" onClick="hideCookieNote()">Okay</div>
+    </div>
 
   </div>
+
+  <!-- script -->
+  <script src="scripts/app.js" async></script>
 </body>
 </html>
