Change APIWeasel link to demo

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
         </a>
       </div>
       <div class="project">
-        <a href="https://github.com/themihel/APIWeasel" target="_blank">
+        <a href="https://apiweasel.themihel.me/" target="_blank">
           <img src="images/projects/apiweasel_thumb.jpg" alt="APIWeasel Thumbnail" width="300">
         </a>
       </div>
