--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <!-- Meta -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <meta name="theme-color" content="#254441">
+  <meta name="theme-color" content="#000000">
   <meta name="author" content="Mischa Helfenstein">
   <meta name="description" content="Mischa Helfenstein | Frontend-Developer | UX/UI-Design">
 
@@ -21,68 +21,263 @@
   <title>themihel.me | Mischa Helfenstein</title>
 </head>
 <body>
-  <!-- Main View -->
-  <div class="mainView">
+  <!-- Index View -->
+  <div class="indexView">
+    <div class="profileLinks">
+      <a target="_blank" href="https://github.com/themihel/"><img src="images/icons/github.svg" alt="Github - Profile"></a>
+      <a target="_blank" href="https://twitter.com/themihel"><img src="images/icons/twitter.svg" alt="Twitter - Profile"></a>
+      <a href="mailto:helfenstein.mischa@gmail.com"><img src="images/icons/email.svg" alt="Email - Link"></a>
+    </div>
+    <div class="profilePhoto">
+      <img src="images/profile/profilePhoto.jpg" alt="Mischa Helfenstein - Profile Photo">
+    </div>
+    <div class="profileText">
+      <h1>Mischa Helfenstein</h1>
+      <h2>Student | Frontend Developer</h2>
+    </div>
+  </div>
 
-    <!-- Profile Picture  -->
-    <div class="flex flexRow flexRowCenter">
-      <div class="headerImage">
-        <img src="images/profile/Social_quad.jpg" alt="Profile Picture">
+  <div class="container projects">
+
+    <div class="row title">
+      <h3>Own projects</h3>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/shackbird.png" alt="Shackbird screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>shackbird.de <small>(2017)</small></h4>
+        </div>
+        <div class="description">Responsive website for my friends from Shackbird. With it’s own, custom CMS implementation they are able to post their content whenever they want to do. Including some special features for bands like dynamic counting days to upcoming gigs.</div>
+        <div class="links">
+          <a target="_blank" href="http://shackbird.de">Live Preview</a>
+          <a target="_blank" href="https://github.com/themihel/template.shackbird.de">Template</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Custom CMS</span>
+          <span class="tag">Template</span>
+          <span class="tag">Band - Website</span>
+        </div>
       </div>
     </div>
 
-    <div class="title">
-      <h1>themihel</h1>
-      <h2>Mischa Helfenstein</h2>
-    </div>
-
-    <!-- Social -->
-    <div class="links">
-      <a href="https://twitter.com/themihel">Twitter</a> |
-      <a href="https://github.com/themihel">Github</a> |
-      <a href="mailto:helfenstein.mischa@gmail.com">Mail</a>
-    </div>
-
-    <!-- Projects -->
-    <div class="flex flexRow flexRowSpace flexWrap">
-      <div class="project">
-        <a href="http://mailpen.de/#/demo" target="_blank">
-          <img src="images/projects/mailpen_thumb.jpg" alt="Mailpen Thumbnail" width="300">
-        </a>
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/paper-facebook.png" alt="Facebook paper presentation screenshot">
+        </div>
       </div>
-      <div class="project">
-        <a href="https://apiweasel.themihel.me/" target="_blank">
-          <img src="images/projects/apiweasel_thumb.jpg" alt="APIWeasel Thumbnail" width="300">
-        </a>
-      </div>
-      <div class="project">
-        <a href="https://www.behance.net/gallery/35127337/Adobe-XD-Travel-App-Foodtravel" target="_blank">
-          <img src="images/projects/foodtravel_thumb.jpg" alt="Foodtravel Thumbnail" width="300">
-        </a>
-      </div>
-      <div class="project">
-        <a href="images/mockups/pdf_merge.jpg" target="_blank">
-          <img src="images/projects/pdfmerge_thumb.jpg" alt="PDF-Merge Thumbnail" width="300">
-        </a>
-      </div>
-      <div class="project">
-        <a href="images/mockups/worktimer.jpg" target="_blank">
-          <img src="images/projects/worktimer_thumb.jpg" alt="Worktimer Thumbnail" width="300">
-        </a>
-      </div>
-      <div class="project">
-        <a href="http://qr.themihel.me" target="_blank">
-          <img src="images/projects/qrcode_thumb.jpg" alt="QRCode Thumbnail" width="300">
-        </a>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Facebook News Feed - Paper <small>(2017)</small></h4>
+        </div>
+        <div class="description">Scientific paper about algorithm accountability on “The story selection of the Facbook News Feed”. Based on the concepts behind the News Feed and analysing it’s mixture of different factors influencing the results. Further looking at risks behind an algorithmic filtering and sorting of news especially without every user knowing of it. Also showing some current examples based on political problems with the News Feed. (German only)
+        </div>
+        <div class="links">
+          <a target="_blank" href="https://drive.google.com/open?id=0B-d0qJ4ZlMD9QjM0OHh0MXJMUFk">Paper</a>
+          <a target="_blank" href="https://drive.google.com/open?id=0B-d0qJ4ZlMD9TVkzNHdNS1FBMmM">Presentation</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Uni</span>
+          <span class="tag">Paper</span>
+          <span class="tag">Facebook</span>
+        </div>
       </div>
     </div>
 
-    <!-- cookieNote -->
-    <div class="cookieNote">
-      <div class="cnText">This website uses cookies!</div>
-      <div class="cnButton" onClick="hideCookieNote()">Okay</div>
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/bodycams.png" alt="Bodycam paper presentation screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Bodycams - Paper <small>(2016)</small></h4>
+        </div>
+        <div class="description">What is the current (late 2016) legal situation on bodycam usage of german police officers? This question gets answered in this scientific paper based on each federal state in germany and the overall situation. Includes historical development and of course social problems and advantages based on usage of these cameras.</div>
+        <div class="links">
+          <a target="_blank" href="mailto:helfenstein.mischa@gmail.com">Paper (only on request)</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Uni</span>
+          <span class="tag">Paper</span>
+          <span class="tag">Bodycam</span>
+        </div>
+      </div>
     </div>
 
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/foodtravel.png" alt="Foodtravel screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Foodtravel <small>(2016)</small></h4>
+        </div>
+        <div class="description">Design concept / prototype for an app discovering local, nearby restaurants and bars. Showing different locations with their custom menus and ratings. Made for an Adobe competition using the Adobe XD beta.</div>
+        <div class="links">
+          <a href="https://www.behance.net/gallery/35127337/Adobe-XD-Travel-App-Foodtravel">Behance project</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Design</span>
+          <span class="tag">Concept</span>
+          <span class="tag">App</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/mailpen-1.png" alt="Mailpen screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Mailpen <small>(2016)</small></h4>
+        </div>
+        <div class="description">Final graduation project of my apprenticeship in software development. Planning, building and documenting a newsletter delivery service. Split into two complete separate parts: frontend and backend. The admin interface is built with AngularJS as an onepage app. The backend provides an API (used by frontend) making it easy for other developers to integrate in their custom solutions. </div>
+        <div class="links">
+          <a target="_blank" href="http://mailpen.de/#/demo">Mailpen.de - Demo</a>
+          <a target="_blank" href="https://slides.themihel.me/mailpen/">Presentation</a>
+          <a target="_blank" href="http://docs.mailpen.de/ ">API</a>
+          <a target="_blank" href="https://files.themihel.me/projects/mailpen/Sketchfile-Mailpen">Sketchfile</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Graduation project</span>
+          <span class="tag">Design</span>
+          <span class="tag">Concept</span>
+          <span class="tag">Implementation</span>
+          <span class="tag">API</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/apiweasel.png" alt="APIWeasel screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>APIWeasel <small>(2016)</small></h4>
+        </div>
+        <div class="description">Easy open source API - Documentation system. Providing a simple JSON file, APIWeasel displays all your API routes with search functionality. On top it works offline and is able to be installed on homescreens of phones and tablets using the web manifest. It comes with responsive design and fast loading times using service worker as backbone.
+        </div>
+        <div class="links">
+          <a target="_blank" href="https://github.com/themihel/APIWeasel">Github</a>
+          <a target="_blank" href="https://apiweasel.themihel.me/">Demo</a>
+        </div>
+        <div class="tags">
+          <span class="tag">API</span>
+          <span class="tag">Documentation</span>
+          <span class="tag">Open Source</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/frontend-starter-kit.png" alt="Frontend-starter-kit repo screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Frontend - Starter Kit <small>(2016)</small></h4>
+        </div>
+        <div class="description">Lightweight starter kit for frontend and website projects using latest technology and state of the art build process (early 2016). Including automatic optimizations for HTML, CSS, JS and images. Easy starting point for new developers with hot reloading website on save and linting JS for better code quality. Up to date dependencies using greenkeeper.</div>
+        <div class="links">
+          <a target="_blank" href="https://github.com/themihel/frontend-starter-kit">Github</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Starter Kit</span>
+          <span class="tag">Open Source</span>
+          <span class="tag">Frontend</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/qrcode.png" alt="QR Code screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>qr.themihel.me <small>(2015)</small></h4>
+        </div>
+        <div class="description">Responsive service for generating QR - Codes in different sizes. Possibility to set padding and download in different image file types. Also provides an API for integrating it in your website or other apps.</div>
+        <div class="links">
+          <a target="_blank" href="https://qr.themihel.me/">QR - Code</a>
+        </div>
+        <div class="tags">
+          <span class="tag">QR Codes</span>
+          <span class="tag">API</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/pdfmerge.png" alt="PDF Merge screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>PDF - Merge <small>(2015)</small></h4>
+        </div>
+        <div class="description">Design concept for an online PDF merging service. Concept is just uploading PDF files and click "merge" - simple as that. Designed for different screens with different requirements for devices in mind, like simpler UI on mobile screens.</div>
+        <div class="links">
+          <a target="_blank" href="https://themihel.me/images/mockups/pdf_merge.jpg">Preview</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Design</span>
+          <span class="tag">Concept</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
+          <img src="images/projects/worktimer.png" alt="Worktimer screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Worktimer <small>(2015)</small></h4>
+        </div>
+        <div class="description">First project playing around with Sketch in early 2015. Design concept for website advertising a time tracking service. Onepage website showing all the information about the service and call to actions, like subscribing to the newsletter or login.</div>
+        <div class="links">
+          <a target="_blank" href="https://themihel.me/images/mockups/worktimer.jpg">Preview</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Design</span>
+          <span class="tag">Concept</span>
+          <span class="tag">Sketch</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <!-- cookieNote -->
+  <div class="cookieNote">
+    <div class="cnText">This website uses cookies!</div>
+    <div class="cnButton" onClick="hideCookieNote()">Okay</div>
   </div>
 
   <!-- script -->
