--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,28 @@
     <div class="row project">
       <div class="col-md-6">
         <div class="screenshot">
+          <img src="images/projects/paper-search-engine-optimization.png" alt="SEO Paper screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Search engine optimization - Paper<small>(2018)</small></h4>
+        </div>
+        <div class="description">Scientific paper about different types of search engine optimization. Considering all reasonable relations between most of the actors of the socio-informatic system. Also describing all main techniques of manipulating search engines in white and black hat SEO and their consequences for either the optimizer and possible victims. (German only)</div>
+        <div class="links">
+          <a target="_blank" href="#">Paper (coming soon)</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Uni</span>
+          <span class="tag">Paper</span>
+          <span class="tag">SEO</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
           <img src="images/projects/shackbird.png" alt="Shackbird screenshot">
         </div>
       </div>
