Add new project

--- a/app/index.html
+++ b/app/index.html
@@ -46,12 +46,34 @@
     <div class="row project">
       <div class="col-md-6">
         <div class="screenshot">
+          <img src="images/projects/artists-vision.png" alt="Artists.Vision screenshot">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="heading">
+          <h4>Artists.Vision <small>(2018)</small></h4>
+        </div>
+        <div class="description">Artists.Vision is a platform for creatives so they can focus on their work. It provides functionalities to publish their art on the internet in many ways or channels and manage their own website. The platform is created for all kinds of art in a seperate way, beginning with photography, followed by music and many more to provide the best functionality based on the kind of art they're doing.</div>
+        <div class="links">
+          <a target="_blank" href="#">coming soon</a>
+        </div>
+        <div class="tags">
+          <span class="tag">Custom CMS</span>
+          <span class="tag">Platform</span>
+          <span class="tag">Creatives</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="row project">
+      <div class="col-md-6">
+        <div class="screenshot">
           <img src="images/projects/paper-search-engine-optimization.png" alt="SEO Paper screenshot">
         </div>
       </div>
       <div class="col-md-6">
         <div class="heading">
-          <h4>Search engine optimization - Paper<small>(2018)</small></h4>
+          <h4>Search engine optimization - Paper <small>(2018)</small></h4>
         </div>
         <div class="description">Scientific paper about different types of search engine optimization. Considering all reasonable relations between most of the actors of the socio-informatic system. Also describing all main techniques of manipulating search engines in white and black hat SEO and their consequences for either the optimizer and possible victims. (German only)</div>
         <div class="links">
