Fix typo and add link

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="description">Artists.Vision is a platform for creatives so they can focus on their work. It provides functionalities to publish their art on the internet in many ways or channels and manage their own website. The platform is created for all kinds of art in a seperate way, beginning with photography, followed by music and many more to provide the best functionality based on the kind of art they're doing.</div>
         <div class="links">
-          <a target="_blank" href="#">coming soon</a>
+          <a target="_blank" href="https://artists.vision">Register now</a>
         </div>
         <div class="tags">
           <span class="tag">Custom CMS</span>
@@ -97,7 +97,7 @@
         <div class="heading">
           <h4>shackbird.de <small>(2017)</small></h4>
         </div>
-        <div class="description">Responsive website for my friends from Shackbird. With it’s own, custom CMS implementation they are able to post their content whenever they want to do. Including some special features for bands like dynamic counting days to upcoming gigs.</div>
+        <div class="description">Responsive website for my friends from Shackbird. With its own, custom CMS implementation they are able to post their content whenever they want to do. Including some special features for bands like dynamic counting days to upcoming gigs.</div>
         <div class="links">
           <a target="_blank" href="http://shackbird.de">Live Preview</a>
           <a target="_blank" href="https://github.com/themihel/template.shackbird.de">Template</a>
