--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,8 @@
         </div>
         <div class="description">Scientific paper about different types of search engine optimization. Considering all reasonable relations between most of the actors of the socio-informatic system. Also describing all main techniques of manipulating search engines in white and black hat SEO and their consequences for either the optimizer and possible victims. (German only)</div>
         <div class="links">
-          <a target="_blank" href="#">Paper (coming soon)</a>
+          <a target="_blank" href="https://drive.google.com/open?id=1f_2qWo8RdL-o0jW52EBCfuP10YXPRHQ4">Paper</a>
+          <a target="_blank" href="https://drive.google.com/open?id=1uBk-oloI_rjJY58mQk5pnKigGf3fPOPc">Presentation</a>
         </div>
         <div class="tags">
           <span class="tag">Uni</span>
