Add instagram profile

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="theme-color" content="#000000">
   <meta name="author" content="Mischa Helfenstein">
-  <meta name="description" content="Mischa Helfenstein | Frontend-Developer | UX/UI-Design">
+  <meta name="description" content="Mischa Helfenstein | Student | Developer">
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles/app.css">
@@ -26,6 +26,7 @@
     <div class="profileLinks">
       <a target="_blank" href="https://github.com/themihel/"><img src="images/icons/github.svg" alt="Github - Profile"></a>
       <a target="_blank" href="https://twitter.com/themihel"><img src="images/icons/twitter.svg" alt="Twitter - Profile"></a>
+      <a target="_blank" href="https://instagram.com/mischa.helfenstein"><img src="images/icons/instagram.svg" alt="Instagram - Profile"></a>
       <a href="mailto:helfenstein.mischa@gmail.com"><img src="images/icons/email.svg" alt="Email - Link"></a>
     </div>
     <div class="profilePhoto">
@@ -33,7 +34,7 @@
     </div>
     <div class="profileText">
       <h1>Mischa Helfenstein</h1>
-      <h2>Student | Frontend Developer</h2>
+      <h2>Student | Developer</h2>
     </div>
   </div>
 
